--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -44,7 +44,7 @@
         </a> 
     </div>
     <div class="col-md-6 pikachuraichugba">
-        <img src="../assets/img/PIKACHU IS EVOLVING_GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
+        <img src="../assets/img/PIKACHU-IS-EVOLVING-GBA.gif" alt="Pikachu_evolucionando_a_raichu_version_GBA"/>
         <section>
         </div>
     </div>
