--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -69,7 +69,7 @@
                         <a href="../pages/404.html">
                             <img src="../assets/img/telegram.svg" alt="logo_de_red_social_telegram" />
                         </a>
-                        <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+                        <p> <b>Correo: Mj7pikastore1111111@gmailpkatv.com</p>
                         <p> Telefono: +54 8283929484</b> </p>
                     </section>
                 </div>
@@ -89,7 +89,7 @@
                 <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
             </div>
             <div class="col-md-6 pikachueevee2">
-            <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee">
+            <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee">
         </div>  
         </div>
         </section>
