--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -57,9 +57,9 @@
         <video src="../assets/videos/KH-BBS-REMIX-OP.mp4" class="video" alt="Intro de kingdom hearts birth by sleep" controls></video>
         </div>
         <div class="pikachueevee2 col-md-6">
-        <p><b>Correo: Mj7pikastore1111111@gmailpkatv.com.ar</p>
+        <p><b>Correo: Mj7pikastore1111111@gmailpkatv.com</p>
         <p> Telefono: +54 8283929484</b> </p>
-        <img src="../assets/img/pikachu-y-eevee-escuchando-musica.gif" alt="imagen animada de pikachu y eeveee escuchando musica" class="gif-animado-pikachu-eevee2">
+        <img src="../assets/img/pikachu-con-gafas.gif" alt="imagen animada de pikachu con gafas bailando" class="gif-animado-pikachu-eevee2">
         </div>
     </div>
     </section>
