--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -53,7 +53,7 @@
         <hr2><b>SELECCION DE LA PIKATV DEL DIA!</b></hr2>
         <div class="margen-arriba2"></div>
         <div class="row">
-        <div class="pikatv2 col-md-6">
+        <div class="pikasong col-md-6">
         <video src="../assets/videos/KH-BBS-REMIX-OP.mp4" class="video" alt="Intro de kingdom hearts birth by sleep" controls></video>
         </div>
         <div class="pikachueevee2 col-md-6">
