--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -84,7 +84,7 @@
             <div class="col-md-6">
             <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu_is_evolving.gif" class="gif-pikachu-is-evolving"></a>
             </div>
-            <div class="pikasong col-md-6">
+            <div class="pikatv col-md-6">
                 <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
                 <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
             </div>
