--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -37,6 +37,13 @@
         <h1> 
             <a href="../pages/404.html" class="link-rojo">PARA EVOLUCIONAR A RAICHU ES TAN SIMPLE COMO SEGUIRNOS Y UNIRTE A NUESTRO PATREON! CLICK AQUI PARA UNIRTE A NUESTRO PATREON Y EVOLUCIONAR A RAICHU!!</a>
         </h1>
+        <div class="container">
+            <form action="../pages/404.html">
+              <label for="email">Correo electrónico:</label>
+              <input type="email" id="email" name="email" required>
+              <button type="submit">Confirmar</button>
+            </form>
+          </div>
         <div class="row">
             <div class="col-md-6">
         <a href="../pages/404.html" class="patreon">
